--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
   },
   "dependencies": {
     "jquery": "1.12.4 - 3",
-    "js-cookie": "^2.2.0"
+    "js-cookie": "^2.2.0",
+    "stickybits": "^3.3.2"
   }
 }
