--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
     "yargs": "~9.0.1"
   },
   "dependencies": {
+    "debounce": "^1.1.0",
     "jquery": "1.12.4 - 3",
     "js-cookie": "^2.2.0",
     "stickybits": "^3.3.2"
