--- a/package.json
+++ b/package.json
@@ -107,6 +107,6 @@
     "debounce": "^1.1.0",
     "jquery": "1.12.4 - 3",
     "js-cookie": "^2.2.0",
-    "stickybits": "^3.3.2"
+    "stickyfilljs": "^2.0.5"
   }
 }
