--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,12 @@
   "support": {
     "issues": "https://github.com/regionhalland/halland/issues"
   },
+  "repositories": [
+    {
+      "type": "vcs",
+      "url": "https://github.com/helsingborg-stad/acf-export-manager.git"
+    }
+  ],
   "autoload": {
     "psr-4": {
       "App\\": "app/"
@@ -25,7 +31,8 @@
     "composer/installers": "~1.0",
     "illuminate/support": "~5.4",
     "roots/sage-lib": "~9.0.0-beta.4",
-    "soberwp/controller": "~9.0.0-beta.4"
+    "soberwp/controller": "~9.0.0-beta.4",
+    "helsingborg-stad/acf-export-manager": ">=1.0.0"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^2.8.0",
