--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,7 @@
     "composer/installers": "~1.0",
     "illuminate/support": "~5.4",
     "roots/sage-lib": "~9.0.0-beta.4",
-    "soberwp/controller": "~9.0.0-beta.4",
+    "soberwp/controller": "~2.1.0",
     "helsingborg-stad/acf-export-manager": ">=1.0.0"
   },
   "require-dev": {
