--- a/package.json
+++ b/package.json
@@ -107,6 +107,7 @@
     "debounce": "^1.1.0",
     "jquery": "1.12.4 - 3",
     "js-cookie": "^2.2.0",
-    "stickyfilljs": "^2.0.5"
+    "stickyfilljs": "^2.0.5",
+    "tablesort": "^5.1.0"
   }
 }
