--- a/package.json
+++ b/package.json
@@ -104,10 +104,12 @@
     "yargs": "~9.0.1"
   },
   "dependencies": {
+    "awesomplete": "^1.1.3",
     "debounce": "^1.1.0",
     "jquery": "1.12.4 - 3",
     "js-cookie": "^2.2.0",
     "stickyfilljs": "^2.0.5",
-    "tablesort": "^5.1.0"
+    "tablesort": "^5.1.0",
+    "typeahead.js": "^0.11.1"
   }
 }
