--- a/package.json
+++ b/package.json
@@ -108,6 +108,7 @@
     "jquery": "1.12.4 - 3",
     "js-cookie": "^2.2.0",
     "stickyfilljs": "^2.0.5",
-    "tablesort": "^5.1.0"
+    "tablesort": "^5.1.0",
+    "whatwg-fetch": "^3.0.0"
   }
 }
