--- a/resources/assets/config.json
+++ b/resources/assets/config.json
@@ -9,7 +9,7 @@
     ]
   },
   "publicPath": "/app/themes/halland",
-  "devUrl": "http://vg.test",
+  "devUrl": "http://vardgivare.regionhalland.local",
   "proxyUrl": "http://localhost:3000",
   "cacheBusting": "[name]_[hash:8]",
   "watch": [
